--- a/templates/permalink.html
+++ b/templates/permalink.html
@@ -2,4 +2,7 @@
 
 {% block content %}
   {{post.render() | safe}}
+  <a href="/blog" class="blog-link">
+  back to front page
+    </a>
 {% endblock %}
