Add author name to blogpost database. Also rendered the author name for each blog in post.html

--- a/static/main.css
+++ b/static/main.css
@@ -97,6 +97,11 @@ input[type=submit] {
     font-weight: bold;
 }
 
+.post-author {
+    bottom: 0px;
+    color: #999;
+}
+
 .post-date {
     position: absolute;
     right: 0px;
