--- a/templates/signup-form.html
+++ b/templates/signup-form.html
@@ -65,6 +65,9 @@
 
       <input type="submit">
     </form>
+    <a href="/login" class="blog-link">
+      Have Account? Login here
+    </a>
   </body>
 
 </html>
