--- a/templates/login-form.html
+++ b/templates/login-form.html
@@ -39,6 +39,9 @@
 
       <input type="submit">
     </form>
+    <a href="/signup" class="blog-link">
+      No Account? Signup here
+    </a>
   </body>
 
 </html>
